--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -731,8 +731,9 @@ footer .column li {
   text-indent: -9999em;
   display: block;
   position: absolute;
-  top: 50%;
+  top: 45%;
   height: 50px;
+  padding: 0;
   width: 50px;
   opacity: .7;
   -webkit-transition: opacity, 0.5s;
@@ -742,32 +743,34 @@ footer .column li {
   background-position: 0 0;
   background-repeat: no-repeat;
 }
-/* line 39, ../sass/_home.scss */
+/* line 40, ../sass/_home.scss */
 .home .slideshow .slideshow-content .arrow-left:hover, .home .slideshow .slideshow-content .arrow-right:hover {
   opacity: 1;
 }
-/* line 44, ../sass/_home.scss */
+/* line 45, ../sass/_home.scss */
 .home .slideshow .slideshow-content .arrow-left {
   background-image: url(../assets/slider-arrow-left.jpg);
+  left: -45px;
 }
-/* line 48, ../sass/_home.scss */
+/* line 50, ../sass/_home.scss */
 .home .slideshow .slideshow-content .arrow-right {
+  right: -45px;
   background-image: url(../assets/slider-arrow-right.jpg);
 }
-/* line 55, ../sass/_home.scss */
+/* line 58, ../sass/_home.scss */
 .home .slideshow .slideshow-title {
   font-family: "Open Sans";
   font-weight: 600;
   margin-bottom: 1em;
   font-size: 1.4em;
 }
-/* line 62, ../sass/_home.scss */
+/* line 65, ../sass/_home.scss */
 .home .slideshow .slideshow-progress {
   margin-top: -2.5em;
   text-align: center;
   margin-bottom: 1em;
 }
-/* line 67, ../sass/_home.scss */
+/* line 70, ../sass/_home.scss */
 .home .slideshow .slideshow-progress li {
   display: inline-block;
   text-indent: -9999em;
@@ -777,11 +780,11 @@ footer .column li {
   margin: 0;
   padding: 0;
 }
-/* line 76, ../sass/_home.scss */
+/* line 79, ../sass/_home.scss */
 .home .slideshow .slideshow-progress li.active {
   background-position-x: -14px;
 }
-/* line 82, ../sass/_home.scss */
+/* line 85, ../sass/_home.scss */
 .home .slideshow a {
   padding: 1em;
   background: #e6e7e8;
@@ -796,12 +799,12 @@ footer .column li {
   -o-transition: all 0.5s;
   transition: all 0.5s;
 }
-/* line 93, ../sass/_home.scss */
+/* line 96, ../sass/_home.scss */
 .home .slideshow a:hover {
   color: #10244b;
   background: #cbced0;
 }
-/* line 100, ../sass/_home.scss */
+/* line 103, ../sass/_home.scss */
 .home .content {
   background: #f1f1f1 url("../assets/home-content-bg.png") no-repeat bottom left;
   border-bottom: 4px solid #cc3333;
@@ -814,26 +817,26 @@ footer .column li {
   display: table;
   clear: both;
 }
-/* line 107, ../sass/_home.scss */
+/* line 110, ../sass/_home.scss */
 .home .main-content {
   width: 49.322033898305%;
   float: left;
   padding: 2em 8% 2em 2%;
 }
-/* line 112, ../sass/_home.scss */
+/* line 115, ../sass/_home.scss */
 .home .main-content .content-title {
   margin-top: 3.5%;
 }
-/* line 116, ../sass/_home.scss */
+/* line 119, ../sass/_home.scss */
 .home .main-content h2, .home .main-content h3, .home .main-content p {
   color: #153f60;
 }
-/* line 121, ../sass/_home.scss */
+/* line 124, ../sass/_home.scss */
 .home .sidebar-content {
   width: 40.677966101695%;
   float: right;
 }
-/* line 126, ../sass/_home.scss */
+/* line 129, ../sass/_home.scss */
 .home .cutout-overlay {
   margin-top: -5.5em;
   height: 56px;
@@ -841,52 +844,52 @@ footer .column li {
   width: 300%;
   margin-left: -184%;
 }
-/* line 134, ../sass/_home.scss */
+/* line 137, ../sass/_home.scss */
 .home .cutout-overlay .button {
   float: right;
 }
-/* line 139, ../sass/_home.scss */
+/* line 142, ../sass/_home.scss */
 .home .events {
   background: #396eb6;
   padding: 5%;
   position: relative;
   color: #fff;
 }
-/* line 145, ../sass/_home.scss */
+/* line 148, ../sass/_home.scss */
 .home .events .event-title {
   text-transform: uppercase;
 }
-/* line 149, ../sass/_home.scss */
+/* line 152, ../sass/_home.scss */
 .home .events .event {
   margin-bottom: 1em;
 }
-/* line 152, ../sass/_home.scss */
+/* line 155, ../sass/_home.scss */
 .home .events .event .button {
   margin-top: 1em;
   position: relative;
   float: right;
   right: -5.5%;
 }
-/* line 160, ../sass/_home.scss */
+/* line 163, ../sass/_home.scss */
 .home .events .more-events {
   margin-top: 6em;
 }
-/* line 163, ../sass/_home.scss */
+/* line 166, ../sass/_home.scss */
 .home .events .more-events a {
   color: #fff;
   text-decoration: none;
 }
-/* line 168, ../sass/_home.scss */
+/* line 171, ../sass/_home.scss */
 .home .events .more-events li {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-/* line 174, ../sass/_home.scss */
+/* line 177, ../sass/_home.scss */
 .home .events .more-events .event-title {
   margin-bottom: 1.5em;
 }
-/* line 180, ../sass/_home.scss */
+/* line 183, ../sass/_home.scss */
 .home .become-a-member {
   background: #1d2c5e;
   padding: 5% 5% 0;
@@ -894,36 +897,36 @@ footer .column li {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 187, ../sass/_home.scss */
+/* line 190, ../sass/_home.scss */
 .home .become-a-member .button {
   margin-top: 1em;
   position: relative;
   float: right;
   right: -5.5%;
 }
-/* line 195, ../sass/_home.scss */
+/* line 198, ../sass/_home.scss */
 .home .sponsors {
   padding: 3em 0;
   overflow: hidden;
   *zoom: 1;
   border-bottom: 4px solid #cc3333;
 }
-/* line 200, ../sass/_home.scss */
+/* line 203, ../sass/_home.scss */
 .home .sponsors .wrapper {
   position: relative;
 }
-/* line 204, ../sass/_home.scss */
+/* line 207, ../sass/_home.scss */
 .home .sponsors .button {
   position: absolute;
   top: 0;
   right: 0;
   margin-top: -1em;
 }
-/* line 211, ../sass/_home.scss */
+/* line 214, ../sass/_home.scss */
 .home .sponsors .logos {
   padding-top: 1em;
 }
-/* line 214, ../sass/_home.scss */
+/* line 217, ../sass/_home.scss */
 .home .sponsors .logos li {
   float: left;
   width: 14%;
@@ -931,15 +934,15 @@ footer .column li {
   padding: 0;
   margin: 2em 5.5%;
 }
-/* line 221, ../sass/_home.scss */
+/* line 224, ../sass/_home.scss */
 .home .sponsors .logos li:nth-child(4n+1) {
   clear: left;
 }
-/* line 225, ../sass/_home.scss */
+/* line 228, ../sass/_home.scss */
 .home .sponsors .logos li img {
   width: 100%;
 }
-/* line 231, ../sass/_home.scss */
+/* line 234, ../sass/_home.scss */
 .home .president {
   padding: 3em 0;
   background: #f1f1f1;
@@ -947,23 +950,23 @@ footer .column li {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 237, ../sass/_home.scss */
+/* line 240, ../sass/_home.scss */
 .home .president .president-content {
   float: right;
   width: 85%;
 }
-/* line 242, ../sass/_home.scss */
+/* line 245, ../sass/_home.scss */
 .home .president img {
   float: left;
   width: 12%;
   margin-right: 3%;
 }
 @media screen and (max-width: 860px) {
-  /* line 252, ../sass/_home.scss */
+  /* line 255, ../sass/_home.scss */
   .home .slideshow {
     background: #fff;
   }
-  /* line 255, ../sass/_home.scss */
+  /* line 258, ../sass/_home.scss */
   .home .slideshow .slideshow-content {
     float: none;
     position: static;
@@ -973,37 +976,37 @@ footer .column li {
     box-sizing: border-box;
     background: #cc3333;
   }
-  /* line 265, ../sass/_home.scss */
+  /* line 268, ../sass/_home.scss */
   .home .slideshow .slideshow-progress {
     display: none;
   }
-  /* line 270, ../sass/_home.scss */
+  /* line 273, ../sass/_home.scss */
   .home .sidebar-content, .home .main-content {
     float: none;
     width: 100%;
   }
-  /* line 275, ../sass/_home.scss */
+  /* line 278, ../sass/_home.scss */
   .home .cutout-overlay {
     margin: 0 0 2em;
     width: 100%;
     height: auto;
     text-align: right;
   }
-  /* line 281, ../sass/_home.scss */
+  /* line 284, ../sass/_home.scss */
   .home .cutout-overlay .button {
     float: none;
   }
-  /* line 285, ../sass/_home.scss */
+  /* line 288, ../sass/_home.scss */
   .home .president img {
     width: 22%;
   }
-  /* line 289, ../sass/_home.scss */
+  /* line 292, ../sass/_home.scss */
   .home .president .president-content {
     width: 75%;
   }
 }
 @media screen and (max-width: 600px) {
-  /* line 300, ../sass/_home.scss */
+  /* line 303, ../sass/_home.scss */
   .home .sponsors .button {
     position: static;
     margin-top: 1em;
@@ -1011,19 +1014,19 @@ footer .column li {
   }
 }
 @media screen and (max-width: 400px) {
-  /* line 311, ../sass/_home.scss */
+  /* line 314, ../sass/_home.scss */
   .home .president img {
     width: 80%;
     margin: 0 auto 1em;
     float: none;
     display: block;
   }
-  /* line 318, ../sass/_home.scss */
+  /* line 321, ../sass/_home.scss */
   .home .president .president-content {
     width: 100%;
     text-align: center;
   }
-  /* line 325, ../sass/_home.scss */
+  /* line 328, ../sass/_home.scss */
   .home .content-title {
     text-align: center;
     font-size: 1.75em;
