updating background position

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -5,6 +5,7 @@
 		background-size: cover;
 		@include clearfix;
 		display: none;
+		background-position: center;
 
 		&.active{
 			display: block;
