--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -39,6 +39,8 @@
 			text-transform: uppercase;
 			@include transition(background-color .5s);
 
+			a{ color: #fff; }
+
 			&:hover{
 				background: saturate( $blue, 25% );
 			}
