Fixing header and footer issues from overwrite.

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -32,6 +32,8 @@
 		list-style: none;
 		line-height: 1.4em;
 
+		a{ text-decoration: none; }
+
 		&.tab{
 			background: $blue;
 			padding: 1em 1em .25em;
