--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -173,6 +173,7 @@ button, .button{
   		padding: 1em 0 0 35%;
   		margin-top: -1.5em;
   		margin-bottom: 0!important
+  		position: relative;
 	}
 
 	.page-section{
