--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -172,7 +172,7 @@ button, .button{
   		background: #fff;
   		padding: 1em 0 0 35%;
   		margin-top: -1.5em;
-  		margin-bottom: 0!important
+  		margin-bottom: 0!important;
   		position: relative;
 	}
 
